# ParlaMind

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  temp.csv  xml.xml
ParlaMind/src/: DataRetriever.py  FileProcessor.py  FileReader.py  PCA viewer.py  PCA.parquet  Untitled-1.ipynb  cluster_editor.py  dfs zusammenführen.ipynb  import polars as pl.py
XML Files/: 01009.xml  01010.xml  01011.xml  01012.xml  01013.xml  01014.xml  01016.xml  01018.xml  01019.xml  01022.xml  01023.xml  01025.xml  01026.xml  01028.xml  01029.xml  01031.xml  01032.xml  01033.xml  01035.xml  01036.xml  01038.xml  01039.xml  01040.xml  02004.xml  02010.xml  03001.xml  03004.xml  03005.xml  03006.xml  03007.xml  03008.xml  03009.xml  03010.xml  04001.xml  04004.xml  04005.xml  04006.xml  04007.xml  04008.xml  04009.xml  (+67 more)
notebooks/: Topic modelling.ipynb  dfs zusammenführen.ipynb  sentiment.ipynb  sentiment_plots.ipynb
